# dnsstub

./: .gitignore  CMakeLists.txt  README.md  config-schema.xsd  config.h.cmake  main.cpp
openwrt/: Makefile
src/: CMakeLists.txt  Cache.cpp  Cache.h  Config.cpp  Config.h  Dns.cpp  Dns.h  DnsHandler.cpp  DnsHandler.hpp  DnsQueryStatistics.cpp  DnsQueryStatistics.h  Global.cpp  Global.h  SetupInit.cpp  SetupInit.hpp  SetupLog.cpp  SetupLog.hpp  main.cpp
